feat: new method
